[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"
authors = ["Chandler Wilkerson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
regex = "1.1.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
